# chatsafe

./: AGENT.md  CLAUDE.md  CURRENT_STATE.md  Cargo.toml  README.md  TEST_COVERAGE.md  chat.py  chat.sh  model-registry-example.json  model-registry.json  run_tests.sh  scope.md  test_input.txt
archived_crates/: README.md
archived_crates/infer-runtime/: Cargo.toml
archived_crates/store/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: dto.rs  error.rs  lib.rs  metrics.rs  observability.rs  tests.rs
crates/config/: Cargo.toml
crates/config/src/: config_loader.rs  default_registry.json  lib.rs  model_registry.rs  tests.rs
crates/infer-runtime/: Cargo.toml
crates/infer-runtime/src/: lib.rs
crates/local-api/: Cargo.toml
crates/local-api/src/: main.rs  rate_limiter.rs  streaming.rs  tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  llama_adapter.rs  pollution_tests.rs  process_manager.rs  runtime.rs  template_engine.rs  tests.rs
crates/store/: Cargo.toml
docs/: errors.md  model_registry.md  security.md
tests/: README.md  test_comprehensive.sh  test_confusion.sh  test_dod.sh  test_golden.sh  test_overload.sh  test_role_pollution.sh  test_security.sh
