[package]
name = "infer-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
bytes.workspace = true
async-stream.workspace = true

# llama.cpp bindings (commented out for now, using CLI wrapper)
# llama-cpp-2 = { version = "0.1", features = ["metal"] }

reqwest = { version = "0.12", features = ["json", "stream"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.72"