[package]
name = "chatsafe-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }