[package]
name = "chatsafe-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chatsafe-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }